# ImmGraphics

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  debug.h  device.h  gmath.h  immgraphics.h  pipeline.h  renderer.h  uitls.h  vertex.h  window.h
include/pipelines/: shader.h  shaderpip.h
src/: debug.cpp  device.cpp  gmath.cpp  renderer.cpp  window.cpp
src/pipelines/: shaderpip.cpp
test/: box.cpp  capability.cpp  gmath_test.cpp  performance.cpp  phong.cpp  shader_test.cpp  test.cpp  triangle.cpp  window_test.cpp
